  * Fix several problems with surface position decoding and relative
    position decoding.
  * Fix hang on exit after SIGINT.
  * Add --max-range parameter. Use it for relative position limits, and to
    discard bad position results.
  * Display message rate (30 sec average) on the webmap.
  * Restart lighttpd on package upgrade if we changed its config files.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 11 Jan 2015 11:53:48 +0000

dump1090-mutability (1.10.3010.14mu-10) unstable; urgency=medium

  * Many changes to aircraft.json and the webserver code:

  * Restructure to include the current timestamp, and move
    aircraft data down a level. If you're processing the JSON yourself,
    you will need to adjust your code to handle this.
  * Only include aircraft data when we are sure it's valid.
  * Include the time of the last position report in.
  * If the aircraft is on the ground, report altitude as "ground".
  * Strip trailing query strings from URLs before matching, to allow AJAX
    cache-busting query strings to work.
  * Disable the lighttpd stat cache in the provided config fragment, to
    avoid problems with partial content being served if lighttpd caches an
    old size for the JSON data. This would manifest as "bad content length"
    or JSON parse errors in the webmap.

  * Many changes to the webmap javascript:

  * Internal restructuring of how the plane table and map markers are
    maintained. Should be faster and less memory-hungry.
  * Sorting the plane table now sorts missing data high (end of the table for an
    ascending sort).
  * On-the-ground aircraft display an altitude of "ground".
  * Dashed tracks are used when there are lots of missing position reports (more
    than 5 seconds between positions).
  * Green tracks are used for on-the-ground aircraft.
  * Limit history storage requirements by only retaining at most one position
    per 5 seconds.
  * Removal of old aircraft should be much more reliable now, even across