@@ -108,6 +108,10 @@ is_unsigned_int_or_empty() {
   else return 1; fi
 }
 
+is_positive_int() {
+  if echo "$1" | grep -Eq '^(+?[1-9][0-9]*)$'; then return 0; else return 1; fi
+}
+
 is_signed_int() {
   if echo "$1" | grep -Eq '^(0|[+-]?[1-9][0-9]*)$'; then return 0; else return 1; fi
 }
@@ -201,13 +205,10 @@ db_go || true; db_get $NAME/auto-start; if [ "$RET" = "true" ]; then
  db_input_verify medium $NAME/net-bind-address is_ipaddrish_or_empty || true
 
  db_input_verify low $NAME/stats-interval is_unsigned_int || true
- db_input_verify low $NAME/json-interval is_unsigned_int || true
 
- db_go || true; db_get $NAME/json-interval; if [ -n "$RET" ] && [ "$RET" -gt 0 ]; then
-  # only if json-interval was given and non-zero
-  db_input low $NAME/json-dir || true
-  db_input low $NAME/json-location-accuracy || true
- fi
+ db_input_verify low $NAME/json-interval is_positive_int || true
+ db_input low $NAME/json-location-accuracy || true
+ db_input low $NAME/json-dir || true
 
  db_input low $NAME/log-decoded-messages || true
  db_input low $NAME/extra-args || true
